--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,11 @@
+:root {
+    --primary-color: darkblue;
+    --secondary-color: #eee;
+    --text-color: #333;
+    --border-color: black;
+    --box-shadow-color: gray;
+    --main-spacing: 1rem;
+}
 nav {
     background-color: darkblue;
     padding: 10px;
