--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,12 @@
     --box-shadow-color: gray;
     --main-spacing: 1rem;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 nav {
     background-color: darkblue;
     padding: 10px;
@@ -20,11 +26,12 @@ h1 {
     color: darkblue;
 }
 main img {
-    width: 150px;
+    float: right;
+    /*width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: 0 0 30px gray;*/
 }
 p {
     padding: 0;
@@ -36,12 +43,19 @@ main {
 
 aside {
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2); /* 1 */
+    /*margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.2); /* 1 
     padding: 1rem;
     background-color: #eee;
-    color: #333;
+    color: #333; */
+    position: relative;
     text-align: center;
+}
+
+aside h2 {
+    position: absolute;
+    top: 25px;
+    left: 110px;
 }
 
 aside img {
@@ -53,5 +67,17 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class selectors*/
+.box {
+    margin: 1rem;
+    border: 1rem;
+    padding: 1rem;
+    background-color:#d3d3d3 ;
+    color: var(--box-shadow-color);
+    clear: both;
+    
+
 }
 
