--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: darkblue;
+    --primary-color: #000033;
     --secondary-color: #eee;
     --text-color: #333;
     --border-color: black;
@@ -7,55 +7,73 @@
     --main-spacing: 1rem;
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 nav {
     background-color: darkblue;
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
     padding: 20px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 h1 {
     color: darkblue;
 }
+
+main {
+    /*max-width: 840px;*/
+    margin: 1rem;
+    grid-column: 2/3;
+}
+
 main img {
     float: right;
-    /*width: 150px;
+    width: 150px;
     height: auto;
     border: 1px solid black;
     padding: 2px;
-    box-shadow: 0 0 30px gray;*/
+    box-shadow: 0 0 30px #555;
 }
+
 p {
     padding: 0;
 }
 
-main {
-    max-width: 840px;
-}
-
 aside {
     width: 20rem;
-    /*margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2); /* 1 
+    margin: 1rem;
+    border: 1px solid var(--primary-color);  
     padding: 1rem;
-    background-color: #eee;
+    /*background-color: #eee;
     color: #333; */
     position: relative;
     text-align: center;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside h2 {
-    position: absolute;
+    /*position: absolute;
     top: 25px;
-    left: 110px;
+    left: 110px;*/
 }
 
 aside img {
@@ -65,19 +83,27 @@ aside img {
 
 footer {
     margin-top: 15px;
-    border-top: 1px solid #000;
+    border-top: 1px solid #555;
     text-align: center;
 }
 
 /* Class selectors*/
 .box {
     margin: 1rem;
-    border: 1rem;
+    border: 1px solid #DEDEDE;
     padding: 1rem;
-    background-color:#d3d3d3 ;
-    color: var(--box-shadow-color);
+    background-color:#EAEAEA ;
+    color: var(--primary-color);
     clear: both;
-    
-
 }
 
+.box a {
+    color: var(--text-color);
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 20rem 1fr;
+    align-items: center;
+    column-gap: 2rem;
+    }
