--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@ nav {
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: 0.5rem;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 700;
