--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -18,42 +18,45 @@ body {
   color: var(--accent1-color);
 }
 
-.full-width-container {
-  background-color: var(--primary-color);
-}
-
-header, main, footer,
-.full-width-content {
+header {
+  display: grid;
+  grid-template-columns: 100px 1fr auto;
+  align-items: center;
+  padding: 1rem;
   max-width: 960px;
   margin: 0 auto;
+  background-color: var(--accent2-color);
 }
 
-h1 {
-  font-family: var(--heading-font);
-  color: var(--primary-color);
+#logo_link {
+  grid-column: 1;
 }
 
-h2 {
-  font-family: var(--heading-font);
-  background-color: var(--primary-color);
-  color: var(--accent2-color);
-  padding: 16px;
-  text-align: center;
-}
-
-nav, p, section, article {
-  margin: 16px;
-  padding: 8px;
-}
-
-.socialmedia a {
-  text-decoration: none;
-}
-
-.socialmedia img {
-  width: 40px;
+.logo {
+  width: 100px;
   height: auto;
-  border-radius: 50%;
+}
+
+nav {
+  grid-column: 3;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: var(--primary-color);
+  font-size: 1.2rem;
+  padding: 10px;
+}
+
+main {
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .hero {
@@ -92,5 +95,85 @@ nav, p, section, article {
   float: right;
   width: 125px;
   margin-left: 15px;
+}
 
+h2 {
+  font-family: var(--heading-font);
+  background-color: var(--primary-color);
+  color: var(--accent2-color);
+  padding: 16px;
+  text-align: center;
+}
+
+.history-content {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  align-items: center;
+}
+
+.history-content p {
+    flex: 1;
+}
+
+.history-image-container {
+    width: 300px;
+    flex-shrink: 0;
+    text-align: center;
+}
+
+.history-image-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.adventures {
+  text-align: center;
+}
+
+.adventure-gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 15px;
+  padding: 2rem;
+}
+
+.adventure-gallery figure {
+  text-align: center;
+}
+
+.adventure-gallery img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.adventure-gallery figcaption {
+  font-style: italic;
+  margin-top: 5px;
+  color: var(--accent1-color);
+}
+
+footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1rem;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.socialmedia {
+  display: flex;
+  gap: 15px;
+  margin-left: 1rem;
+}
+
+.socialmedia img {
+  width: 30px;
+  height: auto;
+  border-radius: 50%;
 }
